--- a/12-08.md
+++ b/12-08.md
@@ -16,7 +16,7 @@
 
 + 1.1 Diff Backup дифиреницальное резервное копирование, или полное.
 
-Для восстановления требуется всего два слепка резервной копии(первый полный слепок и последний рабочий), также выше скорость восстановления по сравнению с инкрементным копированием.
+Для восстановления требуется всего два слепка резервной копии(первый полный слепок и последний рабочий), также выше скорость восстановления по сравнению с инкрементным копированием. Также можно рассматривать полное резервное копирование, но оно более затратное по занимемому месту хранения.
 
 + 1.2 incremental backup инкрементное копирование
 
