изменено:      virt/05-virt-02.md 	новый файл:    virt/img/2023-02-07_16-06-25.png

--- a/virt/05-virt-02.md
+++ b/virt/05-virt-02.md
@@ -57,5 +57,5 @@ Ansible:
 docker ps
 
 ```
+![vagrant](https://github.com/aleksandr-Shubin-83/homework/blob/main/virt/img/2023-02-07_16-06-25.png)
 
-Прошу продлить срок выполнения задания, так как не сразу получилось настроить на тестовой машине vpn для доступа к  https://vagrantcloud.com/bento/
