Изменения, которые будут включены в коммит:

--- a/11-04/11-04.md
+++ b/11-04/11-04.md
@@ -7,7 +7,7 @@
 Используя Vagrant или VirtualBox, создайте виртуальную машину и установите RabbitMQ.
 Добавьте management plug-in и зайдите в веб-интерфейс.
 
-![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-23_11-44-16.png)
+![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/11-04/img/2023-02-10_16-23-46.png)
 
 *Итогом выполнения домашнего задания будет приложенный скриншот веб-интерфейса RabbitMQ.*
 
@@ -28,7 +28,9 @@ $ pip install pika
 Зайдите в веб-интерфейс, найдите очередь под названием hello и сделайте скриншот.
 После чего запустите второй скрипт consumer.py и сделайте скриншот результата выполнения скрипта
 
-![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-23_11-44-16.png)
+![alt text](/img/2023-02-10_16-25-17.png)
+
+![alt text](/img/2023-02-10_16-25-49.png)
 
 *В качестве решения домашнего задания приложите оба скриншота, сделанных на этапе выполнения.*
 
