--- a/11-04/11-04.md
+++ b/11-04/11-04.md
@@ -7,7 +7,7 @@
 Используя Vagrant или VirtualBox, создайте виртуальную машину и установите RabbitMQ.
 Добавьте management plug-in и зайдите в веб-интерфейс.
 
-![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/11-04/img/2023-02-10_16-23-46.png)
+![alt text](/11-04/img/2023-02-10_16-23-46.png)
 
 *Итогом выполнения домашнего задания будет приложенный скриншот веб-интерфейса RabbitMQ.*
 
@@ -55,15 +55,16 @@ $ cat /etc/hosts
 
 *В качестве решения домашнего задания приложите скриншоты из веб-интерфейса с информацией о доступных нодах в кластере и включённой политикой.*
 
-![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-23_11-44-16.png)
+![alt text](/11-04/img/2023-02-10_16-55-22.png)
 
 Также приложите вывод команды с двух нод:
 
 ```shell script
 $ rabbitmqctl cluster_status
 ```
-![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-23_11-44-16.png)
-![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-23_11-44-16.png)
+![alt text](/11-04/img/2023-02-10_16-55-27.png)
+
+![alt text](/11-04/img/2023-02-10_16-25-29.png)
 
 
 Для закрепления материала снова запустите скрипт producer.py и приложите скриншот выполнения команды на каждой из нод:
@@ -71,9 +72,10 @@ $ rabbitmqctl cluster_status
 ```shell script
 $ rabbitmqadmin get queue='hello'
 ```
-![alt text](https://github.com/aleksandr-Shubin-83/homework/blob/main/img/2023-01-23_11-44-16.png)
 
 После чего попробуйте отключить одну из нод, желательно ту, к которой подключались из скрипта, затем поправьте параметры подключения в скрипте consumer.py на вторую ноду и запустите его.
+
+![alt text](/11-04/img/2023-02-10_16-55-22.png)
 
 *Приложите скриншот результата работы второго скрипта.*
 
@@ -88,5 +90,5 @@ $ rabbitmqadmin get queue='hello'
 
 *Готовый плейбук разместите в своём репозитории.*
 
-
+provision.yml ![provision.yml](/11-04/provision.yml)
 
