Изменения, которые будут включены в коммит:

--- a/11-04/11-04.md
+++ b/11-04/11-04.md
@@ -73,9 +73,14 @@ $ rabbitmqctl cluster_status
 $ rabbitmqadmin get queue='hello'
 ```
 
+![alt text](/11-04/img/2023-02-10_17-26-29.png)
+
+![alt text](/11-04/img/2023-02-10_17-26-59.png)
+
+
 После чего попробуйте отключить одну из нод, желательно ту, к которой подключались из скрипта, затем поправьте параметры подключения в скрипте consumer.py на вторую ноду и запустите его.
 
-![alt text](/11-04/img/2023-02-10_16-55-22.png)
+![alt text](/11-04/img/2023-02-10_17-30-40.png)
 
 *Приложите скриншот результата работы второго скрипта.*
 
@@ -90,5 +95,5 @@ $ rabbitmqadmin get queue='hello'
 
 *Готовый плейбук разместите в своём репозитории.*
 
-provision.yml ![provision.yml](/11-04/provision.yml)
+![Готовый плейбук provision.yml](/11-04/provision.yml)
 
