--- a/Monitoring and fault tolerance/10.5 Load balansing.md
+++ b/Monitoring and fault tolerance/10.5 Load balansing.md
@@ -8,7 +8,9 @@
 
 ### Задание 2
 
+Round Robin - алгоритм распределяет запросы между серверами по очереди. Отлично подходит когда сервера из пула имеют одинаковую мощность.
 
+Weight Round Robin - тот же алгоритм что и предыдущий, но позволяет назначить определенным серверам нужное колличество трафика. Подходит для пуло серверов с разными мощностями.
 
 ### Задание 3
 
