--- a/Monitoring and fault tolerance/10.5 Load balansing.md
+++ b/Monitoring and fault tolerance/10.5 Load balansing.md
@@ -14,4 +14,12 @@ Weight Round Robin - тот же алгоритм что и предыдущий
 
 ### Задание 3
 
-![img](../img/Снимок%20экрана_20230204_232326.png)
+![img](../img/Снимок%20экрана_20230212_213447.png)
+
+### Задание 4
+
+![img](../img/Снимок%20экрана_20230212_215546.png)
+
+### Задание 5
+
+![img](../img/Снимок%20экрана_20230212_232726.png)
