--- a/Monitoring and fault tolerance/10.6 disaster recovery.md
+++ b/Monitoring and fault tolerance/10.6 disaster recovery.md
@@ -3,8 +3,28 @@
 
 
 ### Задание 1
+BaaS
+* Копирование производится по расписанию
+* Большое время восстановления
+* Восстановление возможно из любой копии
+* Создает дополнительную нагрузку на сервер
+* Не резервирует всю инфраструктуру, а только ПО
+* Создается в виде копии данных
 
-Балансировка нагрузки - сервис, позволяющий распределять нагрузку между узлами кластера, обеспечивая стабильную работу, скорость и уменьшая нагрузку на ресурсы.
+DRaaS
+* Реплика может создаваться непрерывно
+* Может иметь только одну версию копии
+* Востановление занимает от минут
+* Можно настроить что именно будет копироваться, и в какой последовательности все будет запускаться при восстановлении
+* Создается в виде копии работающей инфраструктуры 
+
+Active-Active
+
+Одновременно работают два одинаковых сервера за балансировщиком, в случае падения одного из двух серверов, всю нагрузку возьмет на себя второй, и пользователь даже не заметит подмены.
+
+Active-Passive
+
+Похож на Active-Active, но работает только один сервер, второй на подхвате, в случае падения основного, резервный автоматически возьмет всю нагрузку на себя.
 
 ### Задание 2
 
@@ -12,5 +32,5 @@
 * Если сбой не критичный, попытаться исправить вручную.
 * Если проблема серьёзнее, восстановление из резервной копии.
 * RTO = 24 часа, думаю что копии на физическом жестком диске будет достаточно.
-* Копия создается раз в сутки, в промежутке 22:00 - 00:00.
+* Холодное резервное копирование дисков происходит раз в сутки, в промежутке 22:00 - 00:00 поочередно.
 * Первым восстанавливается системный диск, потом диск с данными.
