--- a/Monitoring and fault tolerance/10.7 Fault tolerance.md
+++ b/Monitoring and fault tolerance/10.7 Fault tolerance.md
@@ -11,7 +11,7 @@ terraform {
       source = "yandex-cloud/yandex"
     }
   }
-  required_version = ">= 0.13"
+  required_version = ">= 1.3.0"
 }
 provider "yandex" {
   service_account_key_file = "key.json"
@@ -77,16 +77,27 @@ resource "yandex_lb_network_load_balancer" "balancer" {
 resource "yandex_lb_target_group" "target" {
   name      = "target-group"
 
-  target {
-    subnet_id = "${yandex_vpc_subnet.subnet-1.id}"
-    address   = "${yandex_compute_instance.vm[0].network_interface.0.ip_address}"
-  }
-
-  target {
-    subnet_id = "${yandex_vpc_subnet.subnet-1.id}"
-    address   = "${yandex_compute_instance.vm[1].network_interface.0.ip_address}"
+  dynamic "target" {
+    for_each = "${yandex_compute_instance.vm[*].network_interface.0.ip_address}"
+    content {
+      subnet_id = "${yandex_vpc_subnet.subnet-1.id}"
+      address   = target.value
+    }
   }
 }
+
+
+#  target {
+#    subnet_id = "${yandex_vpc_subnet.subnet-1.id}"
+#    address   = "${yandex_compute_instance.vm[0].network_interface.0.ip_address}"
+#  }
+
+#  target {
+#    subnet_id = "${yandex_vpc_subnet.subnet-1.id}"
+#    address   = "${yandex_compute_instance.vm[1].network_interface.0.ip_address}"
+#  }
+#}
+
 
 ````
 
