Update 10.7 Fault tolerance.md

--- a/Monitoring and fault tolerance/10.7 Fault tolerance.md
+++ b/Monitoring and fault tolerance/10.7 Fault tolerance.md
@@ -22,7 +22,7 @@ provider "yandex" {
 
 resource "yandex_compute_instance" "vm" {
   count = 2
-  name = "vm${count.index}"
+  name = "vm${count.index + 1}"
   resources {
     cores         = 2
     memory        = 2
