--- a/11-01-hw.md
+++ b/11-01-hw.md
@@ -12,6 +12,9 @@
 1.1. Бюджетирование проектов с дальнейшим формированием финансовых аналитических отчётов и прогнозирования рисков.
 СУБД должна гарантировать целостность и чёткую структуру данных.
 
+## ответ
+
+
 1.1.* Хеширование стало занимать длительно время, какое API можно использовать для ускорения работы? 
 
 1.2. Под каждый девелоперский проект создаётся отдельный лендинг, и все данные по лидам стекаются в CRM к 
