--- a/11-02-hw.md
+++ b/11-02-hw.md
@@ -7,7 +7,10 @@
 
 Приведите примеры проблем, которые может решить кеширование. 
 
-*Приведите ответ в свободной форме.*
+- Повышение производительности приложения
+- Увеличение срока ответа на запрос
+- Экономия аппаратных ресурсов
+- Помогает пережить резкие всплески пользовательской активности 
 
 ---
 
@@ -17,6 +20,8 @@
 
 *Приведите скриншот systemctl status memcached, где будет видно, что memcached запущен.*
 
+![image](https://github.com/svmarkst/netology-hw/assets/110044256/e308c47b-1243-4d3c-8d30-bd13e906a322)
+
 ---
 
 ### Задание 3. Удаление по TTL в Memcached
@@ -24,6 +29,11 @@
 Запишите в memcached несколько ключей с любыми именами и значениями, для которых выставлен TTL 5. 
 
 *Приведите скриншот, на котором видно, что спустя 5 секунд ключи удалились из базы.*
+
+![image](https://github.com/svmarkst/netology-hw/assets/110044256/ed4e0f31-abd7-4f51-8604-df75e2887fb6)
+
+TTL 5 оказалось слишком быстрым, чтобы успеть прочитать ключ, поэтому поставил 15.
+с TTL 5 получал END без прочтения ключей
 
 ---
 
