--- a/11-02-hw.md
+++ b/11-02-hw.md
@@ -42,13 +42,6 @@ TTL 5 оказалось слишком быстрым, чтобы успеть 
 Запишите в Redis несколько ключей с любыми именами и значениями. 
 
 *Через redis-cli достаньте все записанные ключи и значения из базы, приведите скриншот этой операции.*
+![image](https://github.com/svmarkst/netology-hw/assets/110044256/3951a60b-8409-478c-b860-1c18e8383517)
 
 
-## Дополнительные задания (со звёздочкой*)
-Эти задания дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже разобраться в материале.
-
-### Задание 5*. Работа с числами 
-
-Запишите в Redis ключ key5 со значением типа "int" равным числу 5. Увеличьте его на 5, чтобы в итоге в значении лежало число 10.  
-
-*Приведите скриншот, где будут проделаны все операции и будет видно, что значение key5 стало равно 10.*
