--- a/Реляционные базы данных и администрирование баз данных/Базы данных.md
+++ b/Реляционные базы данных и администрирование баз данных/Базы данных.md
@@ -23,3 +23,58 @@
 - фамилия varchar(50),
 - ...
 - идентификатор структурного подразделения, внешний ключ, integer).
+
+```
+
+Сотрудники(
+	ID сотрудника, integer, первичный ключ, serial 
+	фамилия varchar(50)
+	имя varchar(50)
+	отчество varchar(50)
+	оклад integer
+	дата найма date
+	ID проекта
+	ID структурного подразделения, внешний ключ, integer
+)
+
+Подразделения (
+	ID подразделения, integer, первичный ключ, serial
+	Название структурного подразделения varchar(50)
+	ID типа подразделения, внешний ключ, integer
+)
+
+Тип подразделения(
+	ID типа подразделения, integer, первичный ключ, serial
+	Название типа подразделения varchar(50)
+)
+
+Филиалы (
+	ID филиала , integer, первичный ключ, serial
+	Страна varchar(50)
+	Регион varchar(50)
+	Город varchar(50) 
+	Улица varchar(50)
+	Дом varchar(50)
+	
+)
+
+Проекты (
+	ID проекта , integer, первичный ключ, serial
+	Название проекта varchar(50)
+)
+
+Назначение сотрудников на проекты (
+	ID проекта, integer, первичный ключ, serial
+	ID сотрудника, внешний ключ, integer
+)
+
+Должности (
+	ID должности , integer, первичный ключ, serial
+	Название должности varchar(50)
+)
+
+Назначение сотрудников на должности (
+	ID должности, integer, первичный ключ, serial
+	ID сотрудника, внешний ключ, integer
+)
+```
