--- a/Реляционные базы данных и администрирование баз данных/Базы данных.md
+++ b/Реляционные базы данных и администрирование баз данных/Базы данных.md
@@ -28,39 +28,39 @@
 
 Сотрудники(
 	ID сотрудника, integer, первичный ключ, serial 
-	фамилия varchar(50)
-	имя varchar(50)
-	отчество varchar(50)
+	фамилия varchar(255)
+	имя varchar(255)
+	отчество varchar(255)
 	оклад integer
 	дата найма date
-	ID проекта
+	ID проекта  внешний ключ, integer
 	ID структурного подразделения, внешний ключ, integer
 )
 
 Подразделения (
 	ID подразделения, integer, первичный ключ, serial
-	Название структурного подразделения varchar(50)
+	Название структурного подразделения varchar(255)
 	ID типа подразделения, внешний ключ, integer
 )
 
 Тип подразделения(
 	ID типа подразделения, integer, первичный ключ, serial
-	Название типа подразделения varchar(50)
+	Название типа подразделения varchar(255)
 )
 
 Филиалы (
 	ID филиала , integer, первичный ключ, serial
-	Страна varchar(50)
-	Регион varchar(50)
-	Город varchar(50) 
-	Улица varchar(50)
-	Дом varchar(50)
+	Страна varchar(255)
+	Регион varchar(255)
+	Город varchar(255) 
+	Улица varchar(255)
+	Дом varchar(255)
 	
 )
 
 Проекты (
 	ID проекта , integer, первичный ключ, serial
-	Название проекта varchar(50)
+	Название проекта varchar(255)
 )
 
 Назначение сотрудников на проекты (
@@ -70,7 +70,7 @@
 
 Должности (
 	ID должности , integer, первичный ключ, serial
-	Название должности varchar(50)
+	Название должности varchar(255)
 )
 
 Назначение сотрудников на должности (
