Update Уязвимости и атаки на информационные системы.md

--- a/Информационная безопасноть/Уязвимости и атаки на информационные системы.md
+++ b/Информационная безопасноть/Уязвимости и атаки на информационные системы.md
@@ -19,7 +19,36 @@
 Ответьте на следующие вопросы:
 
 - Какие сетевые службы в ней разрешены?
+  ```
+  21/tcp   open  ftp         vsftpd 2.3.4
+  22/tcp   open  ssh         OpenSSH 4.7p1 Debian 8ubuntu1 (protocol 2.0)
+  23/tcp   open  telnet      Linux telnetd
+  25/tcp   open  smtp        Postfix smtpd
+  53/tcp   open  domain      ISC BIND 9.4.2
+  80/tcp   open  http        Apache httpd 2.2.8 ((Ubuntu) DAV/2)
+  111/tcp  open  rpcbind     2 (RPC #100000)
+  139/tcp  open  netbios-ssn Samba smbd 3.X - 4.X (workgroup: WORKGROUP)
+  445/tcp  open  netbios-ssn Samba smbd 3.X - 4.X (workgroup: WORKGROUP)
+  512/tcp  open  exec        netkit-rsh rexecd
+  513/tcp  open  login?
+  514/tcp  open  tcpwrapped
+  1099/tcp open  java-rmi    GNU Classpath grmiregistry
+  1524/tcp open  bindshell   Metasploitable root shell
+  2049/tcp open  nfs         2-4 (RPC #100003)
+  2121/tcp open  ftp         ProFTPD 1.3.1
+  3306/tcp open  mysql       MySQL 5.0.51a-3ubuntu5
+  5432/tcp open  postgresql  PostgreSQL DB 8.3.0 - 8.3.7
+  5900/tcp open  vnc         VNC (protocol 3.3)
+  6000/tcp open  X11         (access denied)
+  6667/tcp open  irc         UnrealIRCd
+  8009/tcp open  ajp13       Apache Jserv (Protocol v1.3)
+  8180/tcp open  http        Apache Tomcat/Coyote JSP engine 1.1
+  ```
+  
 - Какие уязвимости были вами обнаружены? (список со ссылками: достаточно трёх уязвимостей)
+  https://www.exploit-db.com/exploits/17491
+  https://www.exploit-db.com/exploits/37598
+  https://www.exploit-db.com/exploits/16922
   
 *Приведите ответ в свободной форме.*  
 
@@ -31,7 +60,12 @@
 
 Ответьте на следующие вопросы:
 
-- Чем отличаются эти режимы сканирования с точки зрения сетевого трафика?
+- Чем отличаются эти режимы сканирования с точки зрения сетевого трафика?^
+ 
 - Как отвечает сервер?
+
+  Сканирование в режиме SYN не открывает TCP соединение полностью, в случае если в ответ приходит ACK значит порт прослушивается, если RST - закрыт.
+  FIN, Xmas завязаны на соблюдении системой RFC 793 - при котором отправка любого пакета (кроме содержащих пакеты SYN, RST или ACK) влечёт за собой отправку в ответ RST, если порт закрыт. А если порт открыт, то ответа никакого не будет.
+  При UDP сканировании отправляется пустой пакет на каждый порт и ожидает ICMP ответ или UDP пакет. Код ответа/ошибки маппится и определяется - закрыт(например тип 3, код 3), открыт(в ответ пришел UDP пакет) или фильтруется(тип 3, коды 1, 2, 9, 10 или 13). UDP сканирование занимает больше всего времени, т.к. открытые порты не всегда отправляют какие-либо ответы и nmap приходится отправлять повторные запросы.
 
 *Приведите ответ в свободной форме.*
